<attachment> label can get very wide, doesn't wrap/truncate https://bugs.webkit.org/show_bug.cgi?id=142214 <rdar://problem/19982499>

Reviewed by Simon Fraser.

Test: fast/attachment/attachment-label-highlight.html

* rendering/RenderThemeMac.h:
* rendering/RenderThemeMac.mm:
(WebCore::labelTextColorForAttachment):
(WebCore::AttachmentLayout::addLine):
(WebCore::AttachmentLayout::layOutText):
(WebCore::AttachmentLayout::AttachmentLayout):
Make it possible to lay out multiple lines of label text.
We lay out the whole string normally, but then only draw N (where N=1 for now,
but is adjustable) of the lines. The remainder of the string is then
merged into a single line, which is middle-truncated with an ellipsis
and drawn in place of the N+1 line.

(WebCore::addAttachmentLabelBackgroundRightCorner):
(WebCore::addAttachmentLabelBackgroundLeftCorner):
(WebCore::paintAttachmentLabelBackground):
Wrap the label background around the multiple lines of text with curved edges.
We run first down the right side of the label, determining whether to use
concave or convex arcs based on the relative widths of adjacent lines.
Then, we run back up the left side of the label doing the same thing.

If the background rects of two lines are very similar (within the rounded rect radius),
they will be expanded to the larger of the two, because otherwise the arcs
look quite wrong.

(WebCore::paintAttachmentLabel):
Draw the label with CoreText directly instead of bothering with WebCore
text layout primitives. There's no need, and it makes wrapping much more complicated.

(WebCore::RenderThemeMac::paintAttachment):
(WebCore::RenderThemeMac::paintAttachmentLabelBackground): Deleted.
(WebCore::RenderThemeMac::paintAttachmentLabel): Deleted.

* fast/attachment/attachment-label-highlight.html: Added.
* platform/mac/fast/attachment/attachment-label-highlight-expected.png: Added.
* platform/mac/fast/attachment/attachment-label-highlight-expected.txt: Added.
Add a test for various <attachment> highlight cases.

* platform/mac/fast/attachment/attachment-rendering-expected.txt:
Update expected result for attachment-rendering, which changed size
because we now bail from text layout if we don't have any text.


Canonical link: https://commits.webkit.org/160274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180950 268f45cc-cd09-0410-ab3c-d52691b4dbfc